--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 		"ghcr.io/devcontainers/features/aws-cli:1": {},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/devcontainers/features/go:1": {},
-		"ghcr.io/devcontainers-contrib/features/kind:1": {}
+		"ghcr.io/devcontainers-contrib/features/kind:1": {},
+		"ghcr.io/devcontainers-contrib/features/kubectl-asdf:2": {}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
