--- a/hack/kind/multi-node-cluster.yaml
+++ b/hack/kind/multi-node-cluster.yaml
@@ -1,9 +1,10 @@
 # three node (two workers) cluster config
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-nodes:
+name: kd-kind
+nodes: 
 - role: control-plane
 - role: worker
 
 
-# kind create cluster --name k8 --config hack/kind/multi-node-cluster.yaml
+# kind create cluster --config hack/kind/multi-node-cluster.yaml
