--- a/modules/api/.air.toml
+++ b/modules/api/.air.toml
@@ -1,19 +1,31 @@
 root = "."
-tmp_dir = ".tmp"
+testdata_dir = "testdata"
+tmp_dir = "tmp"
 
 [build]
-  cmd = "go build -o .tmp/api ."
-  bin = ".tmp/api"
-  delay = 2000
+  args_bin = []
+  bin = "./tmp/main"
+  cmd = "go build -o ./tmp/main ."
+  delay = 1
+  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_file = []
+  exclude_regex = ["_test.go"]
   exclude_unchanged = false
-  include_dir = ["pkg", "../common"]
-  include_file = ["main.go"]
   follow_symlink = false
   full_bin = ""
-  include_ext = ["go"]
-  kill_delay = "1s"
+  include_dir = []
+  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_file = []
+  kill_delay = "0s"
   log = "build-errors.log"
-  stop_on_error = true
+  poll = false
+  poll_interval = 0
+  post_cmd = []
+  pre_cmd = []
+  rerun = false
+  rerun_delay = 500
+  send_interrupt = false
+  stop_on_error = false
 
 [color]
   app = ""
@@ -23,7 +35,17 @@ tmp_dir = ".tmp"
   watcher = "cyan"
 
 [log]
+  main_only = false
   time = false
 
 [misc]
-  clean_on_exit = true
+  clean_on_exit = false
+
+[proxy]
+  app_port = 0
+  enabled = false
+  proxy_port = 0
+
+[screen]
+  clear_on_rebuild = false
+  keep_scroll = true
